# gnnbook

./: pyproject.toml
src/gnnbook/cora-classification/: train.py
src/gnnbook/notebooks/: algo2.1.ipynb
src/gnnbook/prop2-3/: prop2-3.py
