[project]
name = "gnnbook"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "networkx>=3.1",
    "matplotlib>=3.7.5",
    "torch>=2.3.0",
    "torch_geometric>=2.5.3",
    "scikit-learn>=1.3.2",
    "ipykernel>=6.29.4",
    "jax[cpu]>=0.4.13",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true
